### Fix url in precommit (HEAD -> main)
>Mon, 22 May 2023 15:04:24 +0200

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### Fix problem with Ctrl+c Improve quality code Add tests (tag: v0.9.3, origin/main, origin/HEAD)
>Sun, 16 Oct 2022 23:32:58 +0200

>Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)




### Fix documentation
>Sun, 16 Oct 2022 08:20:04 +0200

>Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)




### Fix Ctrl+C problem Improve code quality
>Sun, 16 Oct 2022 08:02:29 +0200

>Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)




### Fix configuration file (tag: v0.9.2)
>Thu, 13 Oct 2022 22:06:53 +0200

>Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)




### Fix configuration file
>Thu, 13 Oct 2022 20:18:40 +0200

>Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)




### Fix packaging
>Thu, 13 Oct 2022 19:04:10 +0200

>Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)




### Add HTTPS support
>Thu, 13 Oct 2022 18:52:59 +0200

>Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)




### Add about_us.html template in the packaging
>Wed, 12 Oct 2022 05:40:28 +0200

>Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)



