@@ -1,12 +1,12 @@
-aiofiles==22.1.0
-asyncpg==0.26.0
-fastapi==0.85.0
-http3==0.6.7
+aiofiles==23.1.0
+asyncpg==0.27.0
+fastapi==0.95.2
+httpx==0.24.1
 jinja2==3.1.2
 pydantic==1.10.2
 pydantic-xml[lxml]==0.2.2
 python-dotenv==0.21.0
 setuptools-scm==7.0.5
-tortoise-orm==0.19.2
+tortoise-orm==0.19.3
 types-setuptools==65.4.0.0
-uvicorn==0.18.3
+uvicorn==0.22
