@@ -1,4 +1,14 @@
-### Fix url in precommit (HEAD -> main)
+### Fix methods due to the new version of fastapi Closes #5 - use httpx instead of http3 (HEAD -> main)
+>Mon, 22 May 2023 15:09:11 +0200
+
+>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)
+
+>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)
+
+
+
+
+### Fix url in precommit
 >Mon, 22 May 2023 15:04:24 +0200
 
 >Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)
